Many comments about when stackmaps are created are wrong or misleading
Categories
(Core :: JavaScript: WebAssembly, defect, P3)
Tracking
()
People
(Reporter: lth, Assigned: lth)
References
(Regression)
Details
(Keywords: regression)
Attachments
(1 file)
Bug 1628426 changed the code so that stack maps are always created for debugging. Comments in the code that assert that stack maps are only created when there are reference types present are therefore wrong.
(I'm still undecided on whether the original change was correct but it's at least possible to track the broken comments on the present bug.)
| Assignee | ||
Updated•4 years ago
|
Updated•4 years ago
|
| Assignee | ||
Comment 1•4 years ago
|
||
(In reply to Lars T Hansen [:lth] from comment #0)
(I'm still undecided on whether the original change was correct ...)
It is probably desirable to keep it the way it is now, see bug 1714086 comment 14. I'll fix the comments.
| Assignee | ||
Comment 2•4 years ago
|
||
Update comments so that they adhere to the current reality: that every
function with a DebugFrame gets stack maps at all safe points
regardless of whether the function has reftyped values or locals.
(Whether it should be so is open to question, but it is so.)
Improve the description strings in the breakpoint traps.
Uniformly convert 'stack map' to 'stackmap' in comments so that we
have only one spelling throughout.
Comment 4•4 years ago
|
||
| bugherder | ||
Updated•4 years ago
|
Description
•