Bug 1715514 - Fix sundry comments related to stackmaps and breakpoints.  r=jseward

Update comments so that they adhere to the current reality: that every
function with a DebugFrame gets stack maps at all safe points
regardless of whether the function has reftyped values or locals.
(Whether it should be so is open to question, but it is so.)

Improve the description strings in the breakpoint traps.

Uniformly convert 'stack map' to 'stackmap' in comments so that we
have only one spelling throughout.

Differential Revision: https://phabricator.services.mozilla.com/D119283